# private-hosted-agents

./: .gitignore  AGENTS.md  PROVISION.md  README.md  renovate.json
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-07-14T16-50-11-891Z.yml  page-2026-07-14T16-50-19-272Z.yml
workshop-concierge-adk/: .dockerignore  .gitignore  CLEANUP.md  DEMO-SCRIPT.md  Dockerfile  FINAL-REPORT.md  KNOWN-ISSUES.md  README.md  azure.yaml  golden-path-status.md  pyproject.toml  requirements.lock.txt
workshop-concierge-adk/agent/: .agentignore  agent.yaml  eval.yaml
workshop-concierge-adk/agent/evaluators/wc-quality/: rubric_dimensions.json
workshop-concierge-adk/architecture/decisions/: ADR-000-azd-isolation.md  ADR-001-teams-public-ingress.md
workshop-concierge-adk/catalog/: recommendation_matrix.yaml  tracks.yaml
workshop-concierge-adk/docs/: CUSTOMER-READINESS-G3-TEAMS.md  architecture-teams-foundry.excalidraw
workshop-concierge-adk/evidence/: G0-environment.md  G1-responses-adapter.md  G2-hosted-agent.md  G3-ingress-proof.txt  G3-teams-publish.md  G4-adaptive-card.md  G5-evaluation.md  G6-guardrail.md  G7-ai-gateway.md  G8-capstone.md  g4-suite-3x.txt  g5-scorecard-run1.json  g5-scorecard-run2.json  g5-scorecard-run3.json  g6-guardrail-run1.json  g6-guardrail-run2.json  g6-guardrail-run3.json  g7-gateway-run1.json  g7-gateway-run2.json  g7-gateway-run3.json  g8-capstone-run1.json  g8-capstone-run2.json  g8-capstone-run3.json  g8-suite-3x.txt
workshop-concierge-adk/evidence/g2-runs/: run1.json  run2.json  run3.json
workshop-concierge-adk/infra/bot/: app-gateway.bicep  app-gateway.json  bot-service.bicep
workshop-concierge-adk/scripts/: bootstrap-azd-env.sh  capstone-proof.py  create-appgw-subnet.sh  deploy-agent.py  enable-activity-protocol.sh  eval-scorecard.py  gateway-proof.py  grant-agent-model-access.sh  guardrail-proof.py  harden-gateway-inbound.sh  issue-tls-cert.sh  publish-m365.sh  publish-teams.sh  run-local.sh  smoke-live.py
workshop-concierge-adk/src/adapter/: adk_runner.py  app.py
workshop-concierge-adk/src/bot/: messaging.py
workshop-concierge-adk/src/workshop_concierge/: __init__.py  agent.py  cards.py  catalog.py  guardrail.py  recommend.py  session.py  teams_dispatch.py
workshop-concierge-adk/teams/manifest/: manifest.json
workshop-concierge-adk/tests/: conftest.py  fakes.py  golden.jsonl  test_adapter_contract.py  test_adk_runner.py  test_agent.py  test_bot_messaging.py  test_guardrail.py  test_recommend.py  test_session.py  test_teams_dispatch.py  test_testtool_host.py  test_testtool_host_agent.py
workshop-concierge-adk/tools/teams-testtool/: .gitignore  .teamsapptesttool.yml  EVIDENCE.md  README.md  agent_bridge.py  host.py  requirements-agent.txt  requirements.txt  run-bot-agent.sh  run-bot.sh  run-testtool.sh  smoke.py  smoke_agent.py  telemetry.py  trigger-proactive.sh
(+40 files in other folders)
